[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/UI/DocumentationEntry.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.0156863, 0.054902, 0.176471, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Theme" id=2]
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/colors/font_color_focus = Color( 1, 1, 1, 1 )
Button/colors/font_color_hover = Color( 0.223529, 0.309804, 0.568627, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/styles/focus = SubResource( 6 )
Button/styles/hover = SubResource( 3 )
Button/styles/normal = SubResource( 4 )
Button/styles/pressed = SubResource( 5 )
Panel/styles/panel = SubResource( 9 )

[sub_resource type="Theme" id=10]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=8]
PanelContainer/styles/panel = SubResource( 7 )

[node name="Panel" type="Panel"]
margin_right = 350.0
margin_bottom = 34.0
rect_min_size = Vector2( 410, 0 )
size_flags_vertical = 3
theme = SubResource( 2 )
script = ExtResource( 1 )

[node name="ExpandToggle" type="Button" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 405.0
margin_bottom = 29.0
align = 2

[node name="CategoryName" type="Label" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 340.0
margin_bottom = 24.0
size_flags_horizontal = 0
autowrap = true

[node name="Separator" type="ColorRect" parent="."]
margin_left = 10.0
margin_right = 400.0
margin_bottom = 2.0
theme = SubResource( 10 )
color = Color( 0.223529, 0.309804, 0.568627, 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 10.0
margin_right = 400.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
theme = SubResource( 8 )

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_right = 390.0
margin_bottom = 100.0

[node name="CategoryDescription" type="Label" parent="PanelContainer/VBoxContainer"]
margin_right = 390.0
margin_bottom = 14.0
autowrap = true

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 390.0
margin_bottom = 18.0
size_flags_vertical = 0

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="ExpandToggle" to="." method="_on_ExpandToggle_pressed"]
